--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   },
   "devDependencies": {
     "eslint": "7",
-    "eslint-config-next": "12.0.1"
+    "eslint-config-next": "12.0.1",
+		 "next": "12.0.1",
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
   }
 }
