--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"eslint": "7",
+		"eslint-config-next": "12.0.1"
+	},
+	"devDependencies": {
+		"netlify-deployment-hours-plugin": "^1.0.8",
 		"next": "12.0.1",
 		"react": "17.0.2",
 		"react-dom": "17.0.2"
-	},
-	"devDependencies": {
-		"eslint": "7",
-		"eslint-config-next": "12.0.1"
 	}
 }
