--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "next12",
 	"version": "0.1.0",
-	"private": true,
+	"private": false,
 	"scripts": {
 		"dev": "next dev",
 		"build": "next build",
