--- a/package.json
+++ b/package.json
@@ -1,21 +1,20 @@
 {
-	"name": "next12",
-	"version": "0.1.0",
-	"private": false,
-	"scripts": {
-		"dev": "next dev",
-		"build": "next build",
-		"start": "next start",
-		"lint": "next lint"
-	},
-	"dependencies": {
-		"eslint": "7",
-		"eslint-config-next": "12.0.1"
-	},
-	"devDependencies": {
-		"netlify-deployment-hours-plugin": "^1.0.8",
-		"next": "12.0.1",
-		"react": "17.0.2",
-		"react-dom": "17.0.2"
-	}
+  "name": "next12",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
+  "dependencies": {
+    "next": "12.0.1",
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
+  },
+  "devDependencies": {
+    "eslint": "7",
+    "eslint-config-next": "12.0.1"
+  }
 }
